fix one element of jumpy inputs

--- a/services/QuillLMS/app/assets/stylesheets/shared/inputs.scss
+++ b/services/QuillLMS/app/assets/stylesheets/shared/inputs.scss
@@ -167,7 +167,7 @@ select {
     &.has-text {
       input {
         height: inherit;
-        padding: 3px 0px;
+        padding: 3px 0px 4px;
       }
       label {
         font-size: 12px;
